adding BS, updating JS comments and structure replacing css

--- a/index.html
+++ b/index.html
@@ -1,71 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <title>Contacts</title>
-  <link rel="stylesheet" href="styles/normalize.css">
-  <link rel="stylesheet" href="styles/styles.css">
+    <meta charset="UTF-8">
+    <title>Address Book</title>
+    <link rel="stylesheet" href="styles/normalize.css">
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
+
 <body>
-  <div class="main">
-    <h1>Contact Book</h1>
-  
-    <section class="left-column" id="add-contact-form">
-      <header>Add a Contact:</header>
-      <form>
-        <div class="form-group">
-          <label>First name</label>
-          <input type="text" name="firstName" id="firstName">
+    <section class="container main">
+        <h1>Address Book</h1>
+        <div class="col-md-8">
+            <h3>Add a contact</h2>
+            <!-- Left hand column -->
+            <form class="form-horizontal">
+                <div class="form-group">
+                    <label for="first_name" class="col-sm-2 control-label">First name</label>
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control" id="firstName" placeholder="First Name">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="last_name" class="col-sm-2 control-label">Last name</label>
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control" id="lastName" placeholder="Last Name">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="street" class="col-sm-2 control-label">Street</label>
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control" id="street" placeholder="Street">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="city" class="col-sm-2 control-label">City</label>
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control" id="city" placeholder="City">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="state" class="col-sm-2 control-label">State</label>
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control" id="state" placeholder="State">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="phone_number" class="col-sm-2 control-label">Phone #</label>
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control" id="phoneNumber" placeholder="Phone Number">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-sm-offset-2 col-sm-10">
+                        <button type="submit" class="btn btn-primary" id="add-contact">Add Contact</button>
+                    </div>
+                    <div class="feedback col-sm-offset-2 col-sm-10">
+                        <p>&nbsp;</p>
+                    </div>
+                </div>
+            </form>
         </div>
 
-        <div class="form-group">
-          <label>Last name</label>
-          <input type="text" name="lastName" id="lastName">
-        </div>
 
-        <div class="form-group">
-          <label>Phone Number</label>
-          <input type="text" name="phoneNumber" id="phoneNumber">
+        <div class="col-md-4" id="all-contacts">
+            <div class="col-xs-12" id="all-contacts">
+                <h3>Contact List:</h3>
+            <div class="contacts-list">
+                <ul>
+                </ul>
+            </div>
         </div>
-
-        <div class="form-group">
-          <label>Street</label>
-          <input type="text" name="street" id="street">
+        <div class="col-xs-12" id="contact-detail">
+            <h3>Contact Details:</h3>
+            <ul id="contact-detail-info"></ul>
         </div>
-
-        <div class="form-group">
-          <label>City</label>
-          <input type="text" name="city" id="city">
         </div>
-
-        <div class="form-group">
-          <label>State</label>
-          <input type="text" name="state" id="state">
-        </div>
-        
-        <div class="form-group">
-          <button type="submit" id="add-contact">Add</button>
-          <div class="feedback">
-            <p>&nbsp;</p>
-          </div>
-        </div>
-      </form>
     </section>
-  
-    <section class="right-column" id="contact-detail">
-      <header>Detail:</header>
-      <div id="contact-detail-info"></div>
-    </section>
-  
-    <section class="full-width" id="all-contacts">
-      <header>Contacts:</header>
-      <section class="contacts-list">
-        <ul>
-        </ul>
-      </section>
-    </section>
-  </div>
-  <script type="text/javascript" src="scripts/jquery-2.2.3.min.js"></script>
-  <script type="text/javascript" src="scripts/app.js"></script>
+
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+
+    <script type="text/javascript" src="scripts/app.js"></script>
 </body>
+
 </html>
