updating the js comments and html structure

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <section class="container main">
         <h1>Address Book</h1>
         <div class="col-md-8">
-            <h3>Add a contact</h2>
+            <h3>Add a contact</h3>
             <!-- Left hand column -->
             <form class="form-horizontal">
                 <div class="form-group">
@@ -68,18 +68,17 @@
         </div>
 
 
-        <div class="col-md-4" id="all-contacts">
+        <div class="col-md-4">
             <div class="col-xs-12" id="all-contacts">
                 <h3>Contact List:</h3>
-            <div class="contacts-list">
-                <ul>
-                </ul>
+                <div class="contacts-list">
+                    <ul></ul>
+                </div>
             </div>
-        </div>
-        <div class="col-xs-12" id="contact-detail">
-            <h3>Contact Details:</h3>
-            <ul id="contact-detail-info"></ul>
-        </div>
+            <div class="col-xs-12" id="contact-detail">
+                <h3>Contact Details:</h3>
+                <ul id="contact-detail-info"></ul>
+            </div>
         </div>
     </section>
 
